Fixed the width of the popover. It jumped around too much when it adapted it's width to the content of the holiday section.

--- a/dev/Components/Date.razor.css
+++ b/dev/Components/Date.razor.css
@@ -1,7 +1,4 @@
-﻿.datepop {
-    max-width: 800px !important;
-}
-
+﻿
 ::deep .holiday > .mud-expand-panel-header {
     padding: 0 !important;
     font-size: var(--mud-typography-body2-size);
